theme/nice/style/bootstrapmoodle.css
.card {
    border: none;
    -webkit-box-shadow: var(--nice-box-shadow);
    -moz-box-shadow: var(--nice-box-shadow);
    box-shadow: var(--nice-box-shadow);
}

@media (min-width: 1400px) {

    .container,
    .container-lg,
    .container-md,
    .container-sm,
    .container-xl,
    .container-xxl {
        max-width: 1320px;
    }
}

.breadcrumb-item + .breadcrumb-item::before {
    color: unset;
}

.card {
    border-radius: var(--nice-border-radius);
}

.card .card {
    box-shadow: none;
    border: 2px solid #f5f5f5;
}

.btn {
    border-radius: var(--nice-border-radius);
}

.btn-primary:hover {
    background-color: var(--nice-color-main-hover);
    border-color: var(--nice-color-main-hover);
}

.btn-primary:focus {
    background-color: var(--nice-color-main-focus);
    border-color: var(--nice-color-main-focus);
}

.toggle-sensitive-wrapper #password {
    border-radius: var(--nice-border-radius);
}

.alert {
    border-radius: var(--nice-border-radius);
}

.activity-item {
    border-radius: var(--nice-border-radius);
}

.aalink.focus,
.aabtn:focus,
a.focus.autolink,
.aalink:focus,
a.autolink:focus,
#page-footer a:not([class]).focus,
#page-footer a:not([class]):focus,
.arrow_link.focus,
.arrow_link:focus,
a:not([class]).focus,
a:not([class]):focus,
.activityinstance > a.focus,
.activityinstance > a:focus {
    outline: none;
    background-color: unset;
    box-shadow: none;
    color: unset;
}

a.dimmed,
a.dimmed:link,
a.dimmed:visited,
a.dimmed_text,
a.dimmed_text:link,
a.dimmed_text:visited,
.dimmed_text,
.dimmed_text a,
.dimmed_text a:link,
.dimmed_text a:visited,
.usersuspended,
.usersuspended a,
.usersuspended a:link,
.usersuspended a:visited,
.dimmed_category,
.dimmed_category a {
    color: unset;
}

.aabtn.focus,
.aabtn:focus,
.btn-link.focus,
.btn-link:focus,
.nav-link.focus,
.nav-link:focus,
.editor_atto_toolbar button.focus,
.editor_atto_toolbar button:focus,
.editor_atto_toolbar .atto_toolbar_row.focus,
.editor_atto_toolbar .atto_toolbar_row:focus,
[role="button"].focus,
[role="button"]:focus,
.list-group-item-action.focus,
.list-group-item-action:focus,
input[type="checkbox"].focus,
input[type="checkbox"]:focus,
input[type="radio"].focus,
input[type="radio"]:focus,
input[type="file"].focus,
input[type="file"]:focus,
input[type="image"].focus,
input[type="image"]:focus,
.sr-only-focusable.focus,
.sr-only-focusable:focus,
a.dropdown-toggle.focus,
a.dropdown-toggle:focus,
.modal-dialog[tabindex="0"].focus,
.modal-dialog[tabindex="0"]:focus,
.moodle-dialogue-base .closebutton.focus,
.moodle-dialogue-base .closebutton:focus,
button.close.focus,
button.close:focus,
.form-autocomplete-selection.focus,
.form-autocomplete-selection:focus,
[role="treeitem"]:not([aria-expanded="true"]).focus,
[role="treeitem"]:not([aria-expanded="true"]):focus {
    box-shadow: none;
}

:not(.input-group) > input[type=text],
:not(.input-group) > input[type=password],
:not(.input-group) > textarea {
    width: 100%;
}

.filemanager-container,
.fp-navbar {
    margin-top: 10px;
}

.commands .btn {
    margin: 20px 0 10px 0;
}

.commands {
    display: flex;
    gap: 10px;
}

.post-info .author {
    display: block;
    margin-top: 20px;
    background: var(--nice-color-light-grey);
    padding: 10px 20px;
    border-radius: var(--nice-border-radius);
}

.single-blog-name {
    padding-top: 20px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    color: var(--nice-color-main);
}

.comment-area textarea {
    border-style: solid;
    border-width: 1px;
    border-color: rgb(151 151 151);
    background-color: rgb(255, 255, 255);
    padding: 20px;
    height: 150px;
    max-width: 100%;
    border-radius: var(--nice-border-radius);
    resize: none;
}

.comment-area {
    max-width: 100%;
}

.filemanager-container,
.fp-navbar {
    margin-bottom: 10px;
}

.fd {
    margin-top: 20px;
}

.fd a {
    padding: 10px;
    background: #f5f5f5;
    border-radius: var(--nice-border-radius);
    font-size: 16px;
    display: inline-block;
    margin-bottom: 20px;
}

.addbloglink {
    color: #252583;
    font-weight: bold;
    margin-bottom: 20px;
}

.nice-page-context-header-container {
    background: var(--nice-color-light-grey);
    padding: 10px;
    border-radius: var(--nice-border-radius);
    margin-bottom: 20px;
}

.nice-page-context-header-container .page-context-header {
    align-items: center;
}

.path-course .nice-page-context-header-container {
    display: none;
}

.blog-area h3.main.page-section-title-hide {
    display: none;
}

.blog-area [data-rel="fatalerror"] {
    width: 100%;
}

.blog-area .pagination.pagination-centered {
    width: 100%;
    margin-bottom: 20px;
}

.single-blog-post {
    -webkit-box-shadow: var(--nice-box-shadow);
    -moz-box-shadow: var(--nice-box-shadow);
    box-shadow: var(--nice-box-shadow);
    margin-bottom: 30px;
    border-radius: var(--nice-border-radius);
    position: relative;
}

/* For Extra Large screens */
@media (min-width: 1200px) {

    .single-blog-moodle.col-xl-3:nth-last-child(-n + 4) .single-blog-post,
    .single-blog-moodle.col-xl-3:nth-last-child(-n + 4) ~ .col-xl-3 .single-blog-post {
        margin-bottom: 0;
    }
}

/* For Large screens */
@media (min-width: 992px) and (max-width: 1199px) {

    .single-blog-moodle.col-lg-4:nth-last-child(-n + 3) .single-blog-post,
    .single-blog-moodle.col-lg-4:nth-last-child(-n + 3) ~ .col-lg-4 .single-blog-post {
        margin-bottom: 0;
    }
}

/* For Medium screens */
@media (min-width: 768px) and (max-width: 991px) {

    .single-blog-moodle.col-md-6:nth-last-child(-n + 2) .single-blog-post,
    .single-blog-moodle.col-md-6:nth-last-child(-n + 2) ~ .col-md-6 .single-blog-post {
        margin-bottom: 0;
    }
}

/* For Small screens */
@media (max-width: 767px) {
    .single-blog-moodle.col-sm-6:last-child .single-blog-post {
        margin-bottom: 0;
    }
}
/* ... */

